--- a/serenity-1/Cargo.toml
+++ b/serenity-1/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "RustyCaretakerBot"
+name = "rusty_caretaker_bot"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serenity = "0.11.7"
+
+[dependencies.tokio]
+version = "1.34.0"
+features = [ "rt-multi-thread" ]
